<resources>
    <string name="app_name">CarsShowsBooksSports</string>
    <string name="meniu_principal">Meniu Principal</string>
    <string name="cars">🚗 Cars</string>
    <string name="series">🎌 Series</string>
    <string name="books">📚 Books</string>
    <string name="sports">🏀 Sports</string>
    <string name="car_name">Car Name</string>
    <string name="brand">Brand</string>
    <string name="_2025">2025</string>
    <string name="menu">Menu</string>
    <string name="add_car">Add Car</string>
    <string name="select_a_car">Select a car:</string>
    <string name="add_car_in_the_list">Add Car in the list</string>
    <string name="back">Back</string>
    <string name="create_car">Create Car</string>
    <string name="create_a_car">Create a car</string>
    <string name="car_name_1">Car name</string>
    <string name="brand_1">Brand</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="preview_image">Preview image</string>
    <string name="select_image">Select image</string>
    <string name="add_your_new_created_car">Add your new created car</string>

</resources>