<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#121212"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="0dp"
        android:text="@string/meniu_principal"
        android:textAlignment="center"
        android:textSize="35dp" />

    <Button
        android:id="@+id/btnCars"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cars" />

    <Button
        android:id="@+id/Series"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/series"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnBooks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/books"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnSports"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:layout_margin="10dp"/>



</LinearLayout>
