<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp">

        <!-- Nume Mașină -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_name_1"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_500"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Brand -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_1"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_500"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- An -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_500"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Descriere -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_500"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Imagine selectată -->
        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="259dp"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray"
            android:contentDescription="@string/preview_image"
            android:scaleType="centerCrop" />

        <!-- Buton selectează imagine -->

        <!-- Buton salvare mașină -->
        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/select_image" />

        <Button
            android:id="@+id/btnSaveCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_your_new_created_car"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
