<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageCar"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="Car Image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/textCarName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/car_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageCar"
        app:layout_constraintTop_toTopOf="@id/imageCar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/textCarBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/imageCar"
        app:layout_constraintTop_toBottomOf="@id/textCarName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/textCarYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2025"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageCar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
